[project]
name = "HydroCNHS"
version = "1.0.1"
authors = [{name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}]
license = {file = "LICENSE"}
description = "A Python Package of Hydrological Model for Coupled Natural–Human Systems"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "ruamel.yaml",
    "scipy",
    "scikit-learn",
    "tqdm",
    "pyyaml"
]


[project.optional-dependencies]
dev = [
    "ipython",
]

lint = [
    "pre-commit>=2.20.0",
]

# tools
[tool.setuptools]
packages = ["HydroCNHS"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
