[project]
name = "hydrocnhs"
version = "1.2.0"
authors = [{name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}]
license = {file = "LICENSE"}
description = "A Python Package of Hydrological Model for Coupled Natural–Human Systems"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "ruamel.yaml",
    "scipy",
    "scikit-learn",
    "tqdm",
    "pyyaml",
    "deap"
]


[project.optional-dependencies]
dev = [
    "ipython",
]
lint = [
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]